--- a/.gitignore
+++ b/.gitignore
@@ -622,3 +622,10 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/vue,vuejs,dotnetcore,visualstudio,rider,aspnetcore
+src/SkiAnalyze/app.db
+
+src/SkiAnalyze/app.db-wal
+
+*.db-shm
+
+src/SkiAnalyze/pistes.osm
