Add gondola endpoint

--- a/src/SkiAnalyze/appsettings.Development.json
+++ b/src/SkiAnalyze/appsettings.Development.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "OsmDataPath": "C:\\Users\\chris\\Downloads\\planet_pistes.osm\\planet_pistes-osmium.osm"
+  "ConnectionStrings": {
+    "SqliteConnection": "Filename=app.db"
+  }
 }
