--- a/src/SkiAnalyze/appsettings.json
+++ b/src/SkiAnalyze/appsettings.json
@@ -8,6 +8,6 @@
   "ConnectionStrings": {
     "SqliteConnection": "Filename=app.db"
   },
-  "OsmDataPath": "C:\\Users\\chris\\Downloads\\planet_pistes.osm\\planet_pistes-osmium.osm",
+  "OsmDataPath": "pistes.osm",
   "AllowedHosts": "*"
 }
