--- a/src/SkiAnalyze.Core/SkiAnalyze.Core.csproj
+++ b/src/SkiAnalyze.Core/SkiAnalyze.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+    <PackageReference Include="NetTopologySuite.IO.GPX" Version="1.1.1" />
     <PackageReference Include="OsmSharp" Version="7.0.0-pre014" />
   </ItemGroup>
 
