--- a/src/SkiAnalyze.Core/SkiAnalyze.Core.csproj
+++ b/src/SkiAnalyze.Core/SkiAnalyze.Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="KdTree" Version="1.4.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
     <PackageReference Include="NetTopologySuite.IO.GPX" Version="1.1.1" />
     <PackageReference Include="OsmSharp" Version="7.0.0-pre014" />
