--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@syncfusion/ej2-vue-charts": "^19.3.55",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
