--- a/src/SkiAnalyze.Core/SkiAnalyze.Core.csproj
+++ b/src/SkiAnalyze.Core/SkiAnalyze.Core.csproj
@@ -22,6 +22,15 @@
     <PackageReference Include="Autofac" Version="6.3.0" />
     
     <ProjectReference Include="..\SkiAnalyze.SharedKernel\SkiAnalyze.SharedKernel.csproj" />
+    
+    <ProjectReference Include="..\Util\FitDecode\FitDecode.csproj" />
   </ItemGroup>
+
+
+    <ItemGroup>
+	    <Reference Include="Dynastream.Fit.Portable">
+		    <HintPath>..\..\References\Dynastream.Fit.Portable.dll</HintPath>
+	    </Reference>
+    </ItemGroup>
 
 </Project>
