--- a/src/SkiAnalyze/ClientApp/package.json
+++ b/src/SkiAnalyze/ClientApp/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.5.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue2-leaflet": "^2.7.1",
