--- a/src/SkiAnalyze/ClientApp/package.json
+++ b/src/SkiAnalyze/ClientApp/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.3",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.26.7",
     "vue-router": "^3.2.0",
     "vue2-leaflet": "^2.7.1",
     "vuetify": "^2.4.0",
