Remove console project

--- a/src/SkiAnalyze/SkiAnalyze.csproj
+++ b/src/SkiAnalyze/SkiAnalyze.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId> </UserSecretsId>
+	<SpaRoot>ClientApp\</SpaRoot>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
