--- a/src/SkiAnalyze/ClientApp/package.json
+++ b/src/SkiAnalyze/ClientApp/package.json
@@ -18,7 +18,10 @@
     "vue-router": "^3.2.0",
     "vue2-leaflet": "^2.7.1",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "babel-loader": "^8.1.0",
+    "cache-loader": "^4.1.0",
+    "thread-loader": "^2.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
