--- a/src/SkiAnalyze/ClientApp/package.json
+++ b/src/SkiAnalyze/ClientApp/package.json
@@ -10,18 +10,19 @@
   "dependencies": {
     "@syncfusion/ej2-vue-charts": "^19.3.55",
     "axios": "^0.24.0",
+    "babel-loader": "^8.1.0",
+    "cache-loader": "^4.1.0",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
+    "leaflet-hotline": "^0.4.0",
     "leaflet.markercluster": "^1.5.3",
+    "thread-loader": "^2.1.3",
     "vue": "^2.6.11",
     "vue-i18n": "^8.26.7",
     "vue-router": "^3.2.0",
     "vue2-leaflet": "^2.7.1",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0",
-    "babel-loader": "^8.1.0",
-    "cache-loader": "^4.1.0",
-    "thread-loader": "^2.1.3"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
