Fix weird bounds for datainitializer and make them configurable

--- a/src/SkiAnalyze/appsettings.json
+++ b/src/SkiAnalyze/appsettings.json
@@ -8,6 +8,16 @@
   "ConnectionStrings": {
     "SqliteConnection": "Filename=app.db"
   },
+  "OsmBounds": {
+    "SouthWest": {
+      "Latitude": 46,
+      "Longitude": 6
+    },
+    "NorthEast": {
+      "Latitude": 49,
+      "Longitude": 15
+    }
+  },
   "OsmDataPath": "pistes.osm",
   "AllowedHosts": "*"
 }
