Update to dotnet 7 and update nugets

--- a/src/SkiAnalyze/appsettings.json
+++ b/src/SkiAnalyze/appsettings.json
@@ -18,6 +18,6 @@
       "Longitude": 15
     }
   },
-  "OsmDataPath": "pistes.osm",
+  "OsmDataPath": "C:\\Users\\chris\\Downloads\\planet_pistes.osm\\planet_pistes-osmium.osm",
   "AllowedHosts": "*"
 }
