Move services to application project

--- a/src/SkiAnalyze/SkiAnalyze.csproj
+++ b/src/SkiAnalyze/SkiAnalyze.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SkiAnalyze.Infrastructure\SkiAnalyze.Infrastructure.csproj" />
+        <ProjectReference Include="..\SkiAnalyze.Application\SkiAnalyze.Application.csproj" />
     </ItemGroup>
 
     <ItemGroup>
